# gtf-isoform-plotter

./: .gitignore  LICENSE  README.md  environment.yml  plot_transcript.py  pyproject.toml
examples/: genes_and_splicing.tsv
tests/: test_cli.py  test_gtf.py  test_plotting.py  test_splice.py
transcript_isoform_plotter/: __init__.py  __main__.py  cli.py  gtf.py  plotting.py  splice.py
